--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 					<a href="mains.html"  data-transition="slide" ><img src="images/mains.jpg" class="img-circle" alt="Menu"/></a>
 				</div>		
 			</br>
-			<a href="#" class="btn btn-danger btn-lg">DEVENEZ MAGICIEN</a>
+			<a href="home.html" class="btn btn-danger btn-lg">DEVENEZ MAGICIEN</a>
 
 		</div>
 
