--- a/home.html
+++ b/home.html
@@ -25,7 +25,6 @@
 					</ul>
 				</nav>
 						
-
 		</header>
 				<div id="text">
 					<h1>YOUR N°1 SOURCE</br> FOR MAGIC </br> TUTORIALS</h1>
@@ -89,6 +88,11 @@
 					</div>
 				</div>
 			</div>
+		</div>
+
+		
+		<div id="browsecat">
+			<h1>Browse all categories</h1>
 		</div>
 
 	</section>
@@ -208,6 +212,11 @@
 				</div>
 			</div>
 		</div>
+
+		<div class="allvideos">
+			<h1>WATCH ALL VIDEO</h1>
+		</div>
+
 	</section>
 
 	<section id="popularvid">
@@ -326,6 +335,10 @@
 			</div>
 		</div>
 		
+		<div class="allvideos">
+			<h1>WATCH ALL VIDEO</h1>
+		</div>
+
 	</section>
 
 	<section id="othercategories">
